Add support for GPT

--- a/BSDRP/make.conf
+++ b/BSDRP/make.conf
@@ -42,3 +42,5 @@ NANO_MODULES_amd64_xenhvm=${NANO_MODULES_amd64}
 NANO_MODULES_arm=""
 NANO_MODULES_sparc64="${SHARED_MODULES} sppp"
 
+# Set partitioning scheme (mbr or gpt)
+NANO_DISK_SCHEME=mbr
